# gproxy2

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.action  README.md  README.zh.md  README.zh_CN.md  README_zh.md  RELEASE_NOTE.md  claw.yaml  deno.jsonc  gproxy.example.full.toml  gproxy.example.toml  netlify.toml  package-lock.json  pnpm-lock.yaml  release.sh  render.yaml  route.md  route.zh.md  selftest.ts  zeabur.yaml
apps/gproxy/: Cargo.toml
apps/gproxy/frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/gproxy/frontend/src/: App.tsx  build-info.d.ts  main.tsx
apps/gproxy/frontend/src/app/: App.tsx  i18n.tsx  modules.tsx  session.ts  theme.ts
apps/gproxy/frontend/src/components/: LoginView.tsx  Nav.tsx  ui.tsx
apps/gproxy/frontend/src/i18n/: translate.en.json  translate.zh_cn.json
apps/gproxy/frontend/src/lib/: api.ts  clipboard.ts  credential_import.ts  datetime.ts  form.ts  provider_schema.ts  scope.ts  types.ts
apps/gproxy/frontend/src/sections/: AboutSection.tsx  BatchSection.tsx  CredentialsSection.tsx  LogQuerySection.tsx  OverviewSection.tsx  ProvidersSection.tsx  UsageSection.tsx
apps/gproxy/frontend/src/styles/: index.css
apps/gproxy/src/: admin_ui.rs  main.rs
apps/gproxy/src/bootstrap/: cli.rs  config.rs  mod.rs  runtime.rs
apps/gproxy/src/bootstrap/runtime/: config.rs  http_clients.rs  mod.rs  principal.rs  registry.rs  storage.rs  storage_seed.rs
apps/gproxy/src/middleware/: downstream_event.rs  mod.rs
crates/gproxy-admin/: Cargo.toml
crates/gproxy-admin/src/: admin.rs  error.rs  lib.rs  memory.rs  router.rs  user.rs
crates/gproxy-core/: Cargo.toml
crates/gproxy-core/src/: app_state.rs  http_clients.rs  lib.rs  upstream_http.rs
crates/gproxy-core/src/app_state/: mod.rs  principals.rs  providers.rs  runtime.rs
crates/gproxy-core/src/bootstrap/: mod.rs
crates/gproxy-core/src/proxy_engine/: dispatch.rs  mod.rs  types.rs
crates/gproxy-core/src/routes/: admin.rs  error.rs  login.rs  mod.rs  provider.rs  router.rs  user.rs
crates/gproxy-core/src/routes/admin/: auth.rs  config_toml.rs  credential_statuses.rs  credentials.rs  global_settings.rs  providers.rs  requests.rs  system_update.rs  usages.rs  user_keys.rs  users.rs
crates/gproxy-core/src/routes/provider/: auth.rs  catalog.rs  context.rs  execute.rs  model_prefix.rs  persistence.rs  recording.rs
crates/gproxy-core/src/state/: mod.rs
crates/gproxy-core/src/upstream_client/: mod.rs
crates/gproxy-middleware/: Cargo.toml
crates/gproxy-middleware/src/: lib.rs
crates/gproxy-middleware/src/middleware/: classify.rs  mod.rs  provider_prefix.rs  request_model.rs  usage.rs
crates/gproxy-middleware/src/middleware/provider_prefix/: capture.rs  mod.rs  service.rs  stream.rs
crates/gproxy-middleware/src/middleware/transform/: engine.rs  error.rs  kinds.rs  message.rs  mod.rs  request.rs  response.rs
crates/gproxy-middleware/src/middleware/usage/: mod.rs  parser.rs  service.rs
crates/gproxy-protocol/: .gitignore  Cargo.toml
crates/gproxy-protocol/src/: lib.rs
crates/gproxy-protocol/src/claude/: types.rs
crates/gproxy-protocol/src/claude/count_tokens/: request.rs  types.rs
crates/gproxy-protocol/src/claude/create_message/: request.rs  stream.rs  types.rs
crates/gproxy-protocol/src/claude/model_get/: request.rs
crates/gproxy-protocol/src/claude/model_list/: request.rs
crates/gproxy-protocol/src/gemini/: mod.rs
crates/gproxy-protocol/src/gemini/batch_embed_contents/: request.rs
crates/gproxy-protocol/src/gemini/count_tokens/: request.rs
crates/gproxy-protocol/src/gemini/embeddings/: request.rs
crates/gproxy-protocol/src/gemini/generate_content/: request.rs
crates/gproxy-protocol/src/gemini/generate_videos/: response.rs
crates/gproxy-protocol/src/openai/: mod.rs  types.rs
crates/gproxy-protocol/src/protocol/: endpoint.rs  mod.rs
crates/gproxy-protocol/src/transform/: README.md  README.zh.md
crates/gproxy-protocol/upstream_docs/claude/: README.md
crates/gproxy-protocol/upstream_docs/gemini/: README.md
crates/gproxy-protocol/upstream_docs/openai/: README.md
crates/gproxy-provider/: Cargo.toml
crates/gproxy-provider-core/: Cargo.toml
crates/gproxy-provider-core/src/: lib.rs
crates/gproxy-provider-core/src/config/: dispatch.rs  mod.rs  provider_config.rs
crates/gproxy-provider-core/src/events/: terminal_sink.rs  types.rs
crates/gproxy-provider-core/src/provider/: mod.rs
crates/gproxy-provider-impl/: Cargo.toml
crates/gproxy-provider-impl/src/providers/: http_client.rs  mod.rs
crates/gproxy-provider-impl/tests/: upstream_usage.rs
crates/gproxy-provider/src/: channel.rs  credential.rs  credential_state.rs  dispatch.rs  facade.rs  lib.rs  provider.rs  registry.rs  settings.rs  storage_codec.rs
crates/gproxy-provider/src/channels/: cache_control.rs  credential.rs  mod.rs  retry.rs  settings.rs  upstream.rs  utils.rs
crates/gproxy-provider/src/provider/: capabilities.rs  definition.rs  mod.rs  registry.rs
crates/gproxy-provider/src/tokenizers/: huggingface.rs  mod.rs  tiktoken.rs
crates/gproxy-router/: Cargo.toml
crates/gproxy-router/src/: admin.rs  proxy.rs
crates/gproxy-storage/: Cargo.toml
crates/gproxy-storage/src/: lib.rs  snapshot.rs  storage.rs
crates/gproxy-storage/src/entities/: global_config.rs  user_keys.rs
crates/gproxy-storage/src/query/: common.rs  credentials.rs  global_settings.rs  requests.rs  usages.rs  users.rs
crates/gproxy-storage/src/seaorm/: crypto.rs  migration.rs  mod.rs  store_mutation.rs  store_query.rs  write_sink.rs
crates/gproxy-storage/src/write/: event.rs  worker.rs
crates/gproxy-tokenize/: Cargo.toml
crates/gproxy-tokenize/src/: lib.rs
crates/gproxy-tokenize/src/tokenize/: mod.rs  registry.rs
crates/gproxy-transform/: Cargo.toml
crates/gproxy-transform/src/: lib.rs
crates/gproxy-transform/src/middleware/: mod.rs  stream.rs  tests.rs  types.rs  usage.rs
crates/gproxy-transform/src/transform/: registry.rs  routing.rs
deploy/appwrite/: Cargo.toml  NOTES.md
deploy/appwrite/src/: lib.rs
(+1868 files in other folders)
