[package]
name = "gproxy"
version = "2.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "gproxy v2 — high-performance LLM proxy (rewrite)"

[lib]
name = "gproxy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gproxy"
path = "src/main.rs"

[workspace]

# ── deps compiled on BOTH native and wasm32 ──────────────────────────────────
[dependencies]
anyhow = "1"
async-trait = "0.1"
arc-swap = "1"
blake3 = "1"
bytes = "1"
futures-core = "0.3"
futures-util = "0.3"
http = "1"
regex = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dashmap = "6"

# ── native-only ───────────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["http2", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "=1.2.2", features = ["tokio-comp", "connection-manager"], optional = true }
sea-orm = { version = "=2.0.0-rc.40", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"], optional = true }
tiktoken-rs = { version = "0.12", optional = true }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }

# ── wasm32-only ───────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.8", default-features = false, features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ResponseInit", "WorkerGlobalScope"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"

# ── features ──────────────────────────────────────────────────────────────────
# Production builds compile only the backends they use; dev builds use
# `--all-features` (or `full`). default = native zero-extra-dep baseline.
[features]
default = ["cache-memory", "persist-file", "upstream-wreq", "count-local"]

# cache backends (native)
cache-memory = []
cache-redis = ["dep:redis"]
# persistence backends (native)
persist-file = []
persist-db = ["dep:sea-orm"]
# outbound transport (native)
upstream-wreq = ["dep:wreq"]
# local token counting: tiktoken + HF tokenizers registry (native only)
count-local = ["dep:tiktoken-rs", "dep:tokenizers"]

# edge (wasm) backends — code-only gates (deps are wasm-target)
cache-libsql = []
cache-upstash = []
persist-libsql = []
upstream-fetch = []
edge = ["cache-libsql", "cache-upstash", "persist-libsql", "upstream-fetch"]

# dev convenience: all native backends
full = ["cache-memory", "cache-redis", "persist-file", "persist-db", "upstream-wreq", "count-local"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
