[package]
name = "gproxy"
version = "2.0.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "gproxy v2 — high-performance LLM proxy (rewrite)"

[lib]
name = "gproxy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gproxy"
path = "src/main.rs"

[workspace]

# ── deps compiled on BOTH native and wasm32 ──────────────────────────────────
[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
arc-swap = "1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
chacha20poly1305 = "0.11.0-rc.3"
futures-core = "0.3"
futures-util = "0.3"
# Single RNG source for DEK/nonce/PKCE/ids across native + wasm. Native uses the
# default OS backend; wasm enables the `js` backend (see the wasm target table).
getrandom = "0.2"
http = "1"
regex = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
dashmap = "6"

# ── native-only ───────────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["http2", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
sea-orm = { version = "2.0.0-rc.40", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate"], optional = true }
tiktoken-rs = { version = "0.12", optional = true }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }

# ── wasm32-only ───────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.8", default-features = false, features = ["json"] }
# Two getrandom majors coexist on wasm: jsonwebtoken/p256/p384 → 0.2 (js
# feature); chacha20poly1305 0.11 (crypto-common 0.2) → 0.4 (wasm_js feature,
# paired with the --cfg getrandom_backend rustflag in .cargo/config.toml).
getrandom = { version = "0.2", features = ["js"] }
getrandom_v04 = { version = "0.4", package = "getrandom", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ResponseInit", "WorkerGlobalScope"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
# Native test-only: drive `server::router` end-to-end via `oneshot` and read
# response bodies. On wasm these are real deps (edge.rs); here they are tests-only.
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"

# ── features ──────────────────────────────────────────────────────────────────
# Production builds compile only the backends they use; dev builds use
# `--all-features` (or `full`). default = native zero-extra-dep baseline.
[features]
default = ["cache-memory", "persist-file", "upstream-wreq", "count-local"]

# cache backends (native)
cache-memory = []
cache-redis = ["dep:redis"]
# persistence backends (native)
persist-file = []
persist-db = ["dep:sea-orm"]
# outbound transport (native)
upstream-wreq = ["dep:wreq"]
# local token counting: tiktoken + HF tokenizers registry (native only)
count-local = ["dep:tiktoken-rs", "dep:tokenizers"]

# edge (wasm) backends — code-only gates (deps are wasm-target)
cache-libsql = []
cache-upstash = []
persist-libsql = []
upstream-fetch = []
edge = ["cache-libsql", "cache-upstash", "persist-libsql", "upstream-fetch"]

# dev convenience: all native backends
full = ["cache-memory", "cache-redis", "persist-file", "persist-db", "upstream-wreq", "count-local"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
