[package]
name = "gproxy"
version = "2.0.8"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "GPROXY v2 — high-performance LLM proxy (rewrite)"

[lib]
name = "gproxy"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gproxy"
path = "src/main.rs"

[workspace]
members = [
    "crates/gproxy-protocol",
    "crates/gproxy-tokenize",
    "crates/gproxy-transform",
]
resolver = "3"

# ── deps compiled on BOTH native and wasm32 ──────────────────────────────────
[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
arc-swap = "1"
base64 = "0.22"
blake3 = "1"
bytes = "1"
chacha20poly1305 = "0.11.0-rc.3"
futures-core = "0.3"
futures-util = "0.3"
gproxy-protocol = { path = "crates/gproxy-protocol", version = "2.0.8" }
gproxy-tokenize = { path = "crates/gproxy-tokenize", version = "2.0.8" }
gproxy-transform = { path = "crates/gproxy-transform", version = "2.0.8" }
# Single RNG source for DEK/nonce/PKCE/ids across native + wasm. Native uses the
# default OS backend; wasm enables the `js` backend (see the wasm target table).
getrandom = "0.2"
http = "1"
httpdate = "1"
regex = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# URL-encoded query-string parsing (admin_api query helper; wasm-safe pure-Rust).
serde_urlencoded = "0.7"
# claudecode CCH signer: streaming XXH64 over the native canonical body.
xxhash-rust = { version = "0.8", features = ["xxh64"] }
sha2 = "0.11"
thiserror = "2"
tracing = "0.1"
dashmap = "6"

# ── native-only ───────────────────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { version = "0.8", features = ["http2", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
# §16.2 overload protection: bounded in-flight concurrency + load-shed → 503.
tower = { version = "0.5", default-features = false, features = ["util", "limit", "load-shed"] }
tower-http = { version = "0.7", features = ["cors"] }
clap = { version = "4", features = ["derive", "env"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"], optional = true }
sea-orm = { version = "2.0.0-rc.40", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "sqlx-mysql"], optional = true }
# MIGRATE-V1 (remove in 2.1): read-only reader for the legacy v1 SQLite DB during
# the one-shot v1→v2 startup migration. Only the `sqlite` driver is needed; the
# write path goes through the normal `persist-db` backend.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wreq = { version = "6.0.0-rc.28", features = ["json", "stream", "gzip", "brotli", "zstd", "deflate", "ws"], optional = true }
wreq-util = { version = "3.0.0-rc.11", optional = true }
# self-update (§19, native-only). semver: `releases`-channel version compare.
# ed25519-dalek: verify the signed release manifest with an embedded public key
# (already in the tree via jsonwebtoken; pinned here as a direct dep). self-replace:
# atomic Unix/Windows binary swap.
semver = "1"
ed25519-dalek = "2"
self-replace = "1"
# self-update: extract the `gproxy` executable from the downloaded release `.zip`
# before the atomic swap. default-features off → only the deflate codec the
# release packager uses (`zip -9` / Compress-Archive), no extra codecs.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Console SPA embedding (§9; spec 2026-06-13-console-design.md B1). Native-only:
# wasm/edge builds never embed the console (size-sensitive).
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# ── wasm32-only ───────────────────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
axum = { version = "0.8", default-features = false, features = ["json"] }
# Two getrandom majors coexist on wasm: jsonwebtoken/p256/p384 → 0.2 (js
# feature); chacha20poly1305 0.11 (crypto-common 0.2) → 0.4 (wasm_js feature,
# paired with the --cfg getrandom_backend rustflag in .cargo/config.toml).
getrandom = { version = "0.2", features = ["js"] }
getrandom_v04 = { version = "0.4", package = "getrandom", features = ["wasm_js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ResponseInit", "WorkerGlobalScope"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"
# Native test-only: drive `server::router` end-to-end via `oneshot` and read
# response bodies. On wasm these are real deps (edge.rs); here they are tests-only.
tower = { version = "0.5", default-features = false, features = ["util"] }
http-body-util = "0.1"

# ── features ──────────────────────────────────────────────────────────────────
# Production builds compile only the backends they use; dev builds use
# `--all-features` (or `full`). default = native zero-extra-dep baseline.
[features]
default = ["cache-memory", "persist-db", "persist-file", "upstream-wreq", "count-local", "migrate-v1", "channels"]

# cache backends (native)
cache-memory = []
cache-redis = ["dep:redis"]
# persistence backends (native)
persist-file = []
persist-db = ["dep:sea-orm"]
# MIGRATE-V1 (remove in 2.1): one-shot v1→v2 startup data migration. Pulls the
# read-only sqlx sqlite reader; the write path reuses `persist-db`. Shipped in the
# default/full feature sets so a v2 binary dropped in place auto-migrates v1 data.
migrate-v1 = ["dep:sqlx", "persist-db"]
# outbound transport (native)
upstream-wreq = ["dep:wreq", "dep:wreq-util"]
# local token counting: tiktoken + HF tokenizers registry (native only)
count-local = ["gproxy-tokenize/count-local"]

# edge (wasm) backends — code-only gates (deps are wasm-target)
cache-libsql = []
cache-upstash = []
persist-libsql = []
upstream-fetch = []
edge = ["cache-libsql", "cache-upstash", "persist-libsql", "upstream-fetch", "channels-edge"]

# ── channels: one feature per bulletin, all default-on. `channels` = every
# channel (incl. native-only chatgpt); `channels-edge` is the wasm/edge subset
# (chatgpt needs browser-TLS impersonation → upstream-wreq → native-only).
channels = ["channels-edge", "channel-chatgpt"]
channels-edge = [
    "channel-aistudio",
    "channel-antigravity",
    "channel-claudeapi",
    "channel-claudecode",
    "channel-codex",
    "channel-copilotcli",
    "channel-custom",
    "channel-deepseek",
    "channel-geminicli",
    "channel-groq",
    "channel-kiro",
    "channel-nvidia",
    "channel-openai",
    "channel-openrouter",
    "channel-vercel",
    "channel-vertex",
    "channel-vertexexpress",
]
channel-aistudio = []
channel-antigravity = []
channel-chatgpt = ["upstream-wreq"]
channel-claudeapi = []
channel-claudecode = []
channel-codex = []
channel-copilotcli = []
channel-custom = []
channel-deepseek = []
channel-geminicli = []
channel-groq = []
channel-kiro = []
channel-nvidia = []
channel-openai = []
channel-openrouter = []
channel-vercel = []
channel-vertex = []
channel-vertexexpress = []

# dev convenience: all native backends
full = ["cache-memory", "cache-redis", "persist-file", "persist-db", "upstream-wreq", "count-local", "migrate-v1", "channels"]


[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
