[package]
name = "gproxy-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
blake3 = "1"
gproxy-core = { path = "../gproxy-core" }
gproxy-storage = { path = "../gproxy-storage" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
tokio = { workspace = true, features = ["rt", "macros"] }
