[package]
name = "gproxy-admin"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-storage = { path = "../gproxy-storage" }
sea-orm = "2.0.0-rc.32"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["serde", "v7"] }
