[package]
name = "gproxy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-admin = { path = "../gproxy-admin" }
gproxy-middleware = { path = "../gproxy-middleware" }
gproxy-provider = { path = "../gproxy-provider" }
gproxy-protocol = { path = "../gproxy-protocol" }
gproxy-storage = { path = "../gproxy-storage" }
arc-swap = "1"
axum = { version = "0.8", features = ["json"] }
async-stream = "0.3"
base64 = "0.22"
ed25519-dalek = "2"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "1"
time = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["serde", "v5"] }
wreq = { version = "6.0.0-rc.28", features = ["json","cookies", "socks", "gzip", "stream"] }
wreq-util = "3.0.0-rc.10"
zip = "8"
