[package]
name = "gproxy-middleware"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes = "1"
futures-util = "0.3"
gproxy-protocol = { path = "../gproxy-protocol" }
http = "1"
serde = "1"
serde_json = "1"
tower = "0.5"
