[package]
name = "gproxy-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time = { workspace = true, features = ["serde", "parsing", "formatting"] }
bytes.workspace = true
