[package]
name = "gproxy-protocol"
version = "0.3.2"
edition = "2024"
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
