[package]
name = "gproxy-provider-core"
version = "0.2.1"
edition = "2024"

[dependencies]
gproxy-transform = { path = "../gproxy-transform" }
gproxy-protocol = { path = "../gproxy-protocol" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
async-trait = "0.1"
