[package]
name = "gproxy-provider-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gproxy-transform = { path = "../gproxy-transform" }
gproxy-protocol = { path = "../gproxy-protocol" }
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
async-trait.workspace = true
