[package]
name = "gproxy-provider-impl"
version = "0.2.0"
edition = "2024"

[dependencies]
gproxy-provider-core = { path = "../gproxy-provider-core" }
gproxy-protocol = { path = "../gproxy-protocol" }
bytes = "1"
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tokenizers = "0.22"
tiktoken-rs = "0.9"
wreq = { version = "6.0.0-rc.27", features = ["json","cookies", "socks", "gzip", "stream"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
async-trait = "0.1"
