[package]
name = "gproxy-provider-impl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gproxy-provider-core = { path = "../gproxy-provider-core" }
gproxy-protocol = { path = "../gproxy-protocol" }
bytes.workspace = true
base64 = "0.22"
rand = "0.9"
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
urlencoding = "2"
tokenizers = "0.22"
tiktoken-rs = "0.9"
wreq = { version = "6.0.0-rc.27", features = ["json","cookies", "socks", "gzip", "stream"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
async-trait.workspace = true
