[package]
name = "gproxy-provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
gproxy-middleware = { path = "../gproxy-middleware" }
base64 = "0.22"
dashmap = "6"
http = "1"
http-body-util = "0.1"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiktoken-rs = "0.9"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
url = "2"
wreq = { version = "6.0.0-rc.28", features = ["json","cookies", "socks", "stream", "deflate", "gzip", "zstd", "brotli"] }
