[package]
name = "gproxy-router"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
blake3 = "1"
bytes = "1"
futures-util = "0.3"
gproxy-core = { path = "../gproxy-core" }
gproxy-provider-core = { path = "../gproxy-provider-core" }
gproxy-protocol = { path = "../gproxy-protocol" }
gproxy-storage = { path = "../gproxy-storage" }
gproxy-common = { path = "../gproxy-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
time = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
