[package]
name = "gproxy-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws","http2"] }
blake3 = "1"
bytes.workspace = true
futures-util = "0.3"
gproxy-core = { path = "../gproxy-core" }
gproxy-provider-core = { path = "../gproxy-provider-core" }
gproxy-protocol = { path = "../gproxy-protocol" }
gproxy-storage = { path = "../gproxy-storage" }
gproxy-common = { path = "../gproxy-common" }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
time.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
