[package]
name = "gproxy-storage"
version = "0.2.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
gproxy-common = { path = "../gproxy-common" }
gproxy-provider-core = { path = "../gproxy-provider-core" }
sea-orm = { version = "2.0.0-rc.30", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "with-time", "with-uuid", "with-json", "schema-sync", "entity-registry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
