[package]
name = "gproxy-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
sea-orm = { version = "2.0.0-rc.32", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "with-time", "with-uuid", "with-json", "schema-sync", "entity-registry"] }
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v7"] }
