[package]
name = "gproxy-transform"
version = "2.0.10"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "GPROXY provider protocol transforms"

[dependencies]
bytes = "1"
gproxy-protocol = { path = "../gproxy-protocol", version = "2.0.10" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
